fix(css): update scrollbar

--- a/FlambergeWeb/App/style.css
+++ b/FlambergeWeb/App/style.css
@@ -48,17 +48,22 @@ body {
 /* ----------------------- */
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 8px;
+    height: 8px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
   background: #222; 
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.7);
+  border-radius: 10px;
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #8bd1ff; 
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.7);
 }
 
 /* Handle on hover */
